--- a/meeting-web/app/index.html
+++ b/meeting-web/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="meetingApp">
 <head>
     <meta charset="utf-8">
-    <title>Google Phone Gallery</title>
+    <title>Meeting Organizing app</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/app.css">
     <script src="bower_components/angular/angular.js"></script>
